--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="darken_filter">#80000000</color>
+    <color name="none">#00000000</color>
+    <color name="light_grey">#CCCBCB</color>
 </resources>
