--- a/app/src/main/res/layout/history_page.xml
+++ b/app/src/main/res/layout/history_page.xml
@@ -10,6 +10,8 @@
         android:id="@+id/menu_icon"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:scaleX="0.65"
+        android:scaleY="0.65"
         android:layout_marginTop="15dp"
         android:layout_marginStart="15dp"
         android:background="@color/none"
